Fix header height on mobile and style search bar.
Ref. #8.

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -24,27 +24,26 @@ a:hover {
 }
 @media only screen and (max-width: 600px) {
   .nav-logo {
-    position: absolute;
     height: 60%;
-
+    position: absolute;
+    top: 20%;
     right: 30%;
-    margin: auto auto;
+    margin: auto;
   }
 }
 @media only screen and (min-width: 601px) {
   .nav-logo {
-    position: absolute;
     height: 60%;
-
+    position: absolute;
     right: 0;
     left: 0;
     top: 0;
     bottom: 0;
-    margin: auto auto;
+    margin: auto;
   }
 }
 .header-bottom {
-  height: 200px;
+  min-height: 200px;
   background-color: white;
 
   border-top-style: solid;
@@ -52,14 +51,31 @@ a:hover {
   border-width: 1px;
   border-color: #cccccc;
 
-  -webkit-box-shadow: inset 0px 5px 40px 0px rgba(225, 225, 225, 1);
-  -moz-box-shadow: inset 0px 5px 40px 0px rgba(225, 225, 225, 1);
-  box-shadow: inset 0px 5px 40px 0px rgba(225, 225, 225, 1);
-
   text-align: center;
 }
 .header-mentorship-intro {
-  text-align: justify;
   width: 50%;
-  transform: translateX(50%);
+  margin: 0 auto;
+  text-align: justify;
+}
+@media only screen and (max-width: 600px) {
+  .header-mentorship-intro {
+    width: 80%;
+  }
+}
+.search-input {
+  width: 50%;
+  padding: 10px;
+  border-radius: 10px;
+  margin: 10px auto;
+  transition: box-shadow 0.1s ease-in-out;
+}
+.search-input:focus {
+  outline: none;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
+}
+@media only screen and (max-width: 600px) {
+  .search-input {
+    width: 80%;
+  }
 }
